--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 /WebApplication_01/build/
 /WebApplication_02/nbproject/private/
 /WebApplication_02/build/
+/WebApplication_03/nbproject/private/
+/WebApplication_03_a/nbproject/private/
+/WebApplication_03_a/build/
