--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@
 /WebApplication_03/nbproject/private/
 /WebApplication_03_a/nbproject/private/
 /WebApplication_03_a/build/
+/WebApplication_03_b/nbproject/private/
+/WebApplication_03_b/build/
+/WebApplication_03_c/nbproject/private/
+/WebApplication_03_c/build/
